tests/baselines/reference/jsdocOuterTypeParameters1.errors.txt
error TS5055: Cannot write file 'jsdocOuterTypeParameters1.js' because it would overwrite input file.
  Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
jsdocOuterTypeParameters1.js(1,14): error TS2304: Cannot find name 'T'.
jsdocOuterTypeParameters1.js(4,17): error TS2304: Cannot find name 'T'.
jsdocOuterTypeParameters1.js(4,19): error TS1069: Unexpected token. A type parameter name was expected without curly braces.
jsdocOuterTypeParameters1.js(7,35): error TS2339: Property 'foo' does not exist on type 'Bar'.


!!! error TS5055: Cannot write file 'jsdocOuterTypeParameters1.js' because it would overwrite input file.
!!! error TS5055:   Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
==== jsdocOuterTypeParameters1.js (4 errors) ====
    /** @return {T} */
                 ~
!!! error TS2304: Cannot find name 'T'.
    const dedupingMixin = function(mixin) {};
    
     /** @template {T} */
                    ~
!!! error TS2304: Cannot find name 'T'.
                      ~
!!! error TS1069: Unexpected token. A type parameter name was expected without curly braces.
    const PropertyAccessors = dedupingMixin(() => {
      class Bar {
        static bar() { this.prototype.foo(); }
                                      ~~~
!!! error TS2339: Property 'foo' does not exist on type 'Bar'.
      }
    });
    
    